--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,19 @@
 * {
     box-sizing: border-box;
-    margin: 5px;
+    margin: 0px;
     padding: 0px;
+}
+
+body {
+    position: relative;
 }
 
 header {
     background-color: aqua;
-    position: fixed;
+    position: relative;
     display: block;
     width: 100%;
+    border-radius: 0px 0px 20px 20px;
 }
 
 nav ul {
@@ -20,4 +25,25 @@ nav ul {
 
 nav ul a {
     text-decoration: none;
+}
+
+h2 {
+    border: 5px solid black;
+}
+
+.about-me-section {
+    background-color: yellow;
+}
+
+.work-section {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.contact-section {
+    background-color: beige;
+}
+
+.resume-section {
+    background-color: pink;
 }
