added some colors and pseudo-classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,10 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    background-color: gray;
+    padding: 1%;
 }
+
 
 nav {
     display: flex;
@@ -23,24 +26,47 @@ nav {
     margin-right: 2%;
 }
 
+nav a {
+    font-size: 110%;
+}
+
 a {
     text-decoration: none;
+    color: black;
+}
+
+ nav a:hover {
+    color: white;
+}
+
+nav a:focus {
+    border-color: white;
 }
 
 main {
     display: flex;
-    margin: 1%;
-    max-width: 1200px;
+    padding: 1%;
+    max-width: 1500px;
+    background-color: #e6f2ff;
 }
 
 section {
     padding-right: 5%;
 }
 
+.border-bottom {
+    border-bottom: 2px solid black;
+}
+
 .about-section {
     display: flex;
     justify-content: space-between;
     max-width: 1200px;
+}
+
+.about-section img {
+    width: 200px;
+    height: auto;
 }
 
 .projects article {
@@ -65,6 +91,32 @@ aside ul {
     list-style: none;
 }
 
+/* .hidden {
+    display: none;
+}
+
+.hover:hover .hidden {
+    display: block;
+} */
+
+aside a:hover {
+    color: red;
+    text-decoration: solid red;
+}
+
+aside a:focus {
+    border: 2px solid red;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: grey;
+    padding: 2%;
+    font-size: 110%;
+    font-weight: bold;
+}
+
 @media screen and (max-width: 768px) {
     header,
     main {
@@ -72,15 +124,25 @@ aside ul {
         text-align: center;
     }
 
+    nav {
+        padding: 2%;
+    }
+
+    section {
+        padding-right: 0px;
+    }
+
     .about-section {
         flex-direction: column;
     }
 
-    /* This image does not need to be so big
-
     .about-section img {
+        margin: 0 auto;
+    }
 
-    } */
+    .resume {
+        border-bottom: 2px solid black;
+    }
 
     aside {
         width: 100%;
