--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,47 @@
-* {
+nav,
+footer {
+    background-color: #d1d1e0;
+}
+
+#home:hover,
+#about:hover,
+#work-samples:hover,
+#resume:hover,
+#contact:hover {
+    text-decoration: underline;
+}
+
+#welcome {
+    margin-top: 2%;
+}
+
+.custom-jumbo {
+    background-image: url("coding.jpeg");
+    margin-bottom: 0;
+}
+
+.custom-container {
+    max-width: 50%;
+    border-radius: 10px;
+    padding: 1%;
+    opacity: 0.9;
+}
+
+/* figure out a way to change opacity of just the image */
+img {
+    width: 200px;
+    height: auto;
+    box-shadow: 5px 5px 5px gray;
+    border-radius: 5px;
+}
+
+footer{
+    margin-bottom: 0;
+    padding: 1%;
+    font-family: inherit;
+}
+
+/* * {
     box-sizing: border-box;
     margin: 0%;
     padding: 0%;
@@ -228,4 +271,4 @@ footer {
         margin-top: 1%;
     }
     
-}
+} */
